logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-03T230000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T14:30:08.336+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T23:00:00+00:00 [queued]>
[2025-07-24T14:30:08.358+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T23:00:00+00:00 [queued]>
[2025-07-24T14:30:08.362+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T14:30:08.397+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 23:00:00+00:00
[2025-07-24T14:30:08.420+0000] {standard_task_runner.py:60} INFO - Started process 919 to run task
[2025-07-24T14:30:08.428+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T23:00:00+00:00', '--job-id', '583', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp7zijumjd']
[2025-07-24T14:30:08.435+0000] {standard_task_runner.py:88} INFO - Job 583: Subtask Load_songplays_fact_table
[2025-07-24T14:30:08.605+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T23:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:30:08.757+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T23:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T23:00:00+00:00'
[2025-07-24T14:30:08.769+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:30:08.793+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T230000, start_date=20250724T143008, end_date=20250724T143008
[2025-07-24T14:30:08.823+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 583 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 919)
[2025-07-24T14:30:08.846+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:30:08.880+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:28:10.220+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T23:00:00+00:00 [queued]>
[2025-07-24T17:28:10.233+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T23:00:00+00:00 [queued]>
[2025-07-24T17:28:10.234+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:28:10.351+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 23:00:00+00:00
[2025-07-24T17:28:10.372+0000] {standard_task_runner.py:60} INFO - Started process 2496 to run task
[2025-07-24T17:28:10.378+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T23:00:00+00:00', '--job-id', '2382', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpgb68v24p']
[2025-07-24T17:28:10.383+0000] {standard_task_runner.py:88} INFO - Job 2382: Subtask Load_songplays_fact_table
[2025-07-24T17:28:10.501+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T23:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:28:10.778+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T23:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T23:00:00+00:00'
[2025-07-24T17:28:31.514+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:28:31.530+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T230000, start_date=20250724T172810, end_date=20250724T172831
[2025-07-24T17:28:31.725+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:28:31.760+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
